subir archivos casi listo

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>WhatsApp Chatbox Clone</title>
+  <title>Chat</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.1.2/css/material-design-iconic-font.min.css">
@@ -15,7 +15,7 @@
 <body>
 
   <ul>
-    <li><a class="active" href="index (1).html">chat</a></li>
+    <li><a class="active" href="index (1).html">Chat</a></li>
     <li><a href="subirArchivos.html">Ingresar nuevos archivos</a></li>
   </ul>
 
@@ -23,7 +23,7 @@
     <div class="chat-container">
       <div id="call" class="user-bar">
         <div class="name">
-          <p>insertar gran nombre de chat ia para estudiantes</p>
+          <p>Insertar gran nombre de chat ia para estudiantes</p>
           <span class="status"></span>
         </div>
       </div>
